app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: app
  template:
    metadata:
      name: app
      labels:
        tier: app
    spec:
      containers:
      - name: practice-app
        image: jp4all/practice-app
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5000
