app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-svc
  labels:
    tier: frontend-server    
spec:
  type: ClusterIP
  selector: 
    tier: app
  ports:
    - targetport: 5000 
      port: 5000
