mysql-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-svc
  labels:
    tier: database-server    
spec:
  type: ClusterIP
  selector: 
    tier: database
  ports:
    - targetport: 3306 
      port: 3306
